development

 Changes to CompactAlignmentToAnnotationCountsMode
 - added new option --write-annotation-counts boolean, defaults to true. If set to
   false the annotation counts intermediate files will not be written.
 - Lines where "average count group *" values are ALL NaN or <= 0 will not be written
   This makes it so lines that don't add anything to the output are just omitted.
 - added new option --omit-non-informative-columns, defaults to false. If set to
   true, columns in which all of the data is non-informative (values are ALL NaN or <= 0)
   will be omitted.

 Added support for sequence variations:
 - changed the compact alignment format to support recording sequence variations.
 - the new mode display-sequence-variations provides text output of sequence variations in several formats.
 - the new mode sequence-variation-stats will print statistics about sequence variations found in a set of alignments.
 
 Added support for quality scores:

 - Changed fasta-to-compact and compact-to-fasta to read and write with the Sanger or Illumina quality encoding.
 - Modified aligners to indicate which format they require (bwa needs fastq format, lastag fasta format, lastal fastq format). This will need extensive testing as some of these changes can affect gobyweb.
   We use the FASTQ-SANGER encoding to communicate with lastal.
 We don't yet support the Solexa quality score encoding (it is a bit obsolete anyway).

 Please note that the output format in compact-to-fasta now defaults to Fasta format.
 This format has no quality scores, and consequently, we now never write quality scores
 when Fasta is requested. The aligners that need quality scores must request FastaQ format
 explicitely.
 See also:
  http://en.wikipedia.org/wiki/FASTQ_format
  http://maq.sourceforge.net/fastq.shtml
  http://last.cbrc.jp/last/doc/last-manual.txt (look for FASTQ-SANGER)
 
 Changes to the Compact format: