@@ -1,0 +1,56 @@
+<!--
+  ~ Copyright (C) 2010 Institute for Computational Biomedicine,
+  ~                    Weill Medical College of Cornell University
+  ~
+  ~  This program is free software; you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation; either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
+<jsap>
+    <parameters>
+
+        <flaggedOption>
+            <id>output</id>
+            <shortFlag>o</shortFlag>
+            <longFlag>output</longFlag>
+            <required>false</required>
+            <help>The alignments in text format</help>
+        </flaggedOption>
+
+        <unflaggedOption>
+            <id>input</id>
+            <required>true</required>
+            <help>The compact alignment file to read as input.</help>
+        </unflaggedOption>
+        <flaggedOption>
+            <id>format</id>
+            <shortFlag>f</shortFlag>
+            <longFlag>format</longFlag>
+            <required>false</required>
+            <defaults>
+                <string>plain</string>
+            </defaults>
+            <help>Format of the output file (plain).</help>
+        </flaggedOption>
+        <flaggedOption>
+            <id>suffix</id>
+            <shortFlag>s</shortFlag>
+            <longFlag>suffix</longFlag>
+            <required>false</required>
+            <defaults>
+                <string>keep</string>
+            </defaults>
+            <help>Read set suffix.</help>
+        </flaggedOption>
+    </parameters>
+</jsap>
